--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -4,7 +4,7 @@ security:
         FOS\UserBundle\Model\UserInterface: sha512
 
     role_hierarchy:
-        ROLE_USER:       ROLE_USER
+        ROLE_USER:   ROLE_USER
         ROLE_ADMIN:  ROLE_ADMIN
 
     providers:
@@ -32,5 +32,5 @@ security:
             security: false
 
     access_control:
-        - { path: ^/novios/.*, roles: ROLE_USER}
+        - { path: ^/schedule/.*, roles: ROLE_USER}
         - { path: ^/admin.*, roles: ROLE_ADMIN}
