--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -4,7 +4,7 @@ security:
         FOS\UserBundle\Model\UserInterface: sha512
 
     role_hierarchy:
-        ROLE_USER:   ROLE_USER
+        ROLE_USER:       ROLE_USER
         ROLE_ADMIN:  ROLE_ADMIN
 
     providers:
@@ -18,7 +18,7 @@ security:
                 provider:   fos_userbundle
                 check_path: /login_check
                 login_path: /login
-                default_target_path: /
+                default_target_path: /schedule/jobs
            #     use_referer:    true                
             logout:
                 path:          /logout
@@ -32,5 +32,5 @@ security:
             security: false
 
     access_control:
-        - { path: ^/schedule/.*, roles: ROLE_USER}
+        - { path: ^/novios/.*, roles: ROLE_USER}
         - { path: ^/admin.*, roles: ROLE_ADMIN}
