--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -30,7 +30,7 @@ twig:
 assetic:
     debug:          %kernel.debug%
     use_controller: false
-    bundles:        [ ]
+    bundles:        [ Juanber84ScheduleBundle ]
     #java: /usr/bin/java
     filters:
         cssrewrite: ~
