--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -32,5 +32,5 @@ security:
             security: false
 
     access_control:
-        - { path: ^/novios/.*, roles: ROLE_USER}
+        - { path: ^/schedule/.*, roles: ROLE_USER}
         - { path: ^/admin.*, roles: ROLE_ADMIN}
