--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -32,8 +32,8 @@ security:
             security: false
 
     access_control:
-        - { path: ^/schedule.*, roles: ROLE_USER}
+        - { path: ^/schedule/, roles: ROLE_USER}
         - { path: ^/schedule/jobs.*, roles: ROLE_USER}
-        - { path: ^/schedule/proyects.*, roles: ROLE_USER}
+        - { path: ^/schedule/projects.*, roles: ROLE_USER}
         - { path: ^/schedule/user.*, roles: ROLE_ADMIN}
         - { path: ^/schedule/activities.*, roles: ROLE_ADMIN}
